<?xml version="1.0" encoding="utf-8"?>
<!--Untuk membuat konten apapun dapat di scroll secara vertikal,
cukup bungkus konten-->
<!--tersebut di dalam ScrollView:-->
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#008577"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<!--    sebuah scrollview hanya bisa memiliki 1 anak-->
<!--    maka dari itu dibuat linearlayout karena-->
<!--    kita akan memasukkan beberapa elemen-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#030303"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/buttonsiswa"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#F50710"
            android:onClick="handleSiswa"
            android:text="@string/siswa"
            android:textColor="#F7EFEF" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/guru" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FC0404"
            android:text="@string/kantin"
            android:textColor="#FFF9F9" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/ekstra" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FF0909"
            android:text="@string/kopsis"
            android:textColor="#FFF9F9" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/mapel" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#F80303"
            android:text="@string/ruangkel"
            android:textColor="#F5EFEF" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/uks" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FD0101"
            android:text="@string/satpam"
            android:textColor="#FFF8F8" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:onClick="handleExit"
            android:text="@string/exit" />
    </LinearLayout>
</ScrollView>